Work on character profile settings and css

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_cp.scss
@@ -77,6 +77,9 @@
 	pre code, code pre {
 		background: none;
 	}
+	.panel .inner table ~ .pagination {
+		margin: 0 0 20px 0;
+	}
 	.topiclist {
 		& + p > strong {
 			display: block;
