--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_responsive.scss
@@ -867,7 +867,9 @@
 			.profile-race {
 				margin-left: 0;
 				&:after {
-					content: ',\0000a0\0000a0';
+					content: ',';
+					position: relative;
+					left: -2px;
 				}
 			}
 		}
