--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -44,8 +44,11 @@
 						<div class="flex-column">
 							<h4>Connect With Us</h4>
 							<div class="contact-icons">
-								<a href="//www.facebook.com/khyeras" title="View Facebook Page" target="_blank">
-									<span class="contact-icon phpbb_facebook-icon">View Facebook Page</span>
+								<a href="//www.facebook.com/khyeras" title="View Khy'eras on Facebook" target="_blank">
+									<span class="contact-icon phpbb_facebook-icon">View Khy'eras on Facebook</span>
+								</a>
+								<a href="//twitter.com/KhyerasRPG" title="View Khy'eras on Twitter" target="_blank">
+									<span class="contact-icon phpbb_twitter-icon">View Khy'eras on Twitter</span>
 								</a>
 								<a href="//discord.gg/MXtzbmw" title="Join Our Discord" target="_blank">
 									<span class="contact-icon contact_discord-icon">Join Our Discord</span>
