--- a/khyeras/styles/khyeras_v1/template/partials/memberlist_character_desc.html
+++ b/khyeras/styles/khyeras_v1/template/partials/memberlist_character_desc.html
@@ -1,26 +1,26 @@
-<div class="character-description {{ character_class }}">
-	{% set feature_list_count = (PROFILE_C_HEIGHT_VALUE ~ PROFILE_C_WEIGHT_VALUE ~ PROFILE_C_FIGURE_VALUE ~ PROFILE_C_TORSO_VALUE ~ PROFILE_C_COMPLEXION_VALUE ~ PROFILE_C_FACE_VALUE ~ PROFILE_C_HAIR_VALUE ~ PROFILE_C_EYES_VALUE ~ PROFILE_C_VOICE_VALUE) | length %}
-	{% set feature_other_count = (PROFILE_C_FEATURES_VALUE) | length %}
-	{% set feature_total_count = (feature_list_count + feature_other_count) %}
+<div class="character-description{{ character_class }}">
+	{% set feature_fields = {
+		(PROFILE_C_HEIGHT_NAME)     : PROFILE_C_HEIGHT_VALUE,
+		(PROFILE_C_WEIGHT_NAME)     : PROFILE_C_WEIGHT_VALUE,
+		(PROFILE_C_FIGURE_NAME)     : PROFILE_C_FIGURE_VALUE,
+		(PROFILE_C_TORSO_NAME)      : PROFILE_C_TORSO_VALUE,
+		(PROFILE_C_COMPLEXION_NAME) : PROFILE_C_COMPLEXION_VALUE,
+		(PROFILE_C_FACE_NAME)       : PROFILE_C_FACE_VALUE,
+		(PROFILE_C_HAIR_NAME)       : PROFILE_C_HAIR_VALUE,
+		(PROFILE_C_EYES_NAME)       : PROFILE_C_EYES_VALUE,
+		(PROFILE_C_EARS_NAME)       : PROFILE_C_EARS_VALUE,
+		(PROFILE_C_VOICE_NAME)      : PROFILE_C_VOICE_VALUE
+	} %}
 
-	{% if feature_total_count && feature_total_count > 0 %}
+	{% set feature_list_count = function.count_details(feature_fields) %}
+	{% set feature_other_count = (PROFILE_C_FEATURES_VALUE) ? 1 : 0 %}
+	{% set feature_total_count = feature_list_count + feature_other_count %}
+
+	{% if feature_total_count > 1 %}
 		<section class="page-content-section">
 			<h3>Physical Features</h3>
 
-			{% set feature_fields = {
-				(PROFILE_C_HEIGHT_NAME)     : PROFILE_C_HEIGHT_VALUE,
-				(PROFILE_C_WEIGHT_NAME)     : PROFILE_C_WEIGHT_VALUE,
-				(PROFILE_C_FIGURE_NAME)     : PROFILE_C_FIGURE_VALUE,
-				(PROFILE_C_TORSO_NAME)      : PROFILE_C_TORSO_VALUE,
-				(PROFILE_C_COMPLEXION_NAME) : PROFILE_C_COMPLEXION_VALUE,
-				(PROFILE_C_FACE_NAME)       : PROFILE_C_FACE_VALUE,
-				(PROFILE_C_HAIR_NAME)       : PROFILE_C_HAIR_VALUE,
-				(PROFILE_C_EYES_NAME)       : PROFILE_C_EYES_VALUE,
-				(PROFILE_C_EARS_NAME)       : PROFILE_C_EARS_VALUE,
-				(PROFILE_C_VOICE_NAME)      : PROFILE_C_VOICE_VALUE
-			} %}
-
-			{% if feature_list_count && feature_list_count > 0 %}
+			{% if feature_list_count > 0 %}
 				{{ function.create_details(feature_fields) }}
 			{% endif %}
 
@@ -31,20 +31,20 @@
 		</section>
 	{% endif %}
 
-	{% set social_list_count = (PROFILE_C_ROMANTIC_VALUE ~ PROFILE_C_SEXUAL_VALUE) | length %}
-	{% set social_other_count = (PROFILE_C_RELATIONSHIPS_VALUE ~ PROFILE_C_PERSONALITY_VALUE) | length %}
+	{% set social_fields = {
+		(PROFILE_C_ROMANTIC_NAME) : PROFILE_C_ROMANTIC_VALUE,
+		(PROFILE_C_SEXUAL_NAME)   : PROFILE_C_SEXUAL_VALUE
+	} %}
+
+	{% set social_list_count = function.count_details(social_fields) %}
+	{% set social_other_count = (PROFILE_C_RELATIONSHIPS_VALUE || PROFILE_C_PERSONALITY_VALUE) ? 1 : 0 %}
 	{% set social_total_count = (social_list_count + social_other_count) %}
 
-	{% if social_total_count && social_total_count > 0 %}
+	{% if social_total_count > 1 %}
 		<section class="page-content-section">
 			<h3>Social Interactions</h3>
 
-			{% set social_fields = {
-				(PROFILE_C_ROMANTIC_NAME) : PROFILE_C_ROMANTIC_VALUE,
-				(PROFILE_C_SEXUAL_NAME)   : PROFILE_C_SEXUAL_VALUE
-			} %}
-
-			{% if social_list_count && social_list_count > 0 %}
+			{% if social_list_count > 0 %}
 				{{ function.create_details(social_fields) }}
 			{% endif %}
 
@@ -60,27 +60,27 @@
 		</section>
 	{% endif %}
 
-	{% set religion_list_count = (PROFILE_C_RELIGION_TYPE_VALUE ~ PROFILE_C_RELIGION_OPTS_VALUE) | length %}
-	{% set religion_other_count = (PROFILE_C_RELIGION_HIST_VALUE) | length %}
+	{% set deity_label = 'None' %}
+	{% if PROFILE_C_RELIGION_TYPE_VALUE == 'Archaicism' %}
+		{% set deity_label = 'Archaics' %}
+	{% elseif PROFILE_C_RELIGION_TYPE_VALUE == 'Idolism' %}
+		{% set deity_label = 'Idols' %}
+	{% endif %}
+
+	{% set religion_fields = {
+		'Belief'      : PROFILE_C_RELIGION_TYPE_VALUE,
+		(deity_label) : PROFILE_C_RELIGION_OPTS_VALUE
+	} %}
+
+	{% set religion_list_count = function.count_details(religion_fields) %}
+	{% set religion_other_count = (PROFILE_C_RELIGION_HIST_VALUE) ? 1 : 0 %}
 	{% set religion_total_count = (religion_list_count + religion_other_count) %}
 
-	{% if religion_total_count && religion_total_count > 0 %}
+	{% if religion_total_count > 1 %}
 		<section class="page-content-section">
 			<h3>Religion</h3>
 
-			{% set deity_label = 'None' %}
-			{% if PROFILE_C_RELIGION_TYPE_VALUE == 'Archaicism' %}
-				{% set deity_label = 'Archaics' %}
-			{% elseif PROFILE_C_RELIGION_TYPE_VALUE == 'Idolism' %}
-				{% set deity_label = 'Idols' %}
-			{% endif %}
-
-			{% set religion_fields = {
-				'Type'  : PROFILE_C_RELIGION_TYPE_VALUE,
-				'Deity' : PROFILE_C_RELIGION_OPTS_VALUE
-			} %}
-
-			{% if religion_list_count && religion_list_count > 0 %}
+			{% if religion_list_count > 0 %}
 				{{ function.create_details(religion_fields) }}
 			{% endif %}
 
@@ -91,22 +91,22 @@
 		</section>
 	{% endif %}
 
-	{% set background_list_count = (PROFILE_C_BIRTHDAY_VALUE ~ PROFILE_C_AGE_VALUE ~ PROFILE_C_ORIGIN_VALUE ~ PROFILE_C_RESIDENCE_VALUE) | length %}
-	{% set background_other_count = (PROFILE_C_BACKGROUND_VALUE) | length %}
+	{% set background_fields = {
+		(PROFILE_C_BIRTHDAY_NAME)    : PROFILE_C_BIRTHDAY_VALUE,
+		(PROFILE_C_AGE_NAME)         : PROFILE_C_AGE_VALUE,
+		(PROFILE_C_ORIGIN_NAME)      : PROFILE_C_ORIGIN_VALUE,
+		(PROFILE_C_RESIDENCE_NAME)   : PROFILE_C_RESIDENCE_VALUE
+	} %}
+
+	{% set background_list_count = function.count_details(background_fields) %}
+	{% set background_other_count = (PROFILE_C_BACKGROUND_VALUE) ? 1 : 0 %}
 	{% set background_total_count = (background_list_count + background_other_count) %}
 
-	{% if PROFILE_C_BACKGROUND_VALUE %}
+	{% if background_total_count > 1 %}
 		<section class="page-content-section">
 			<h3>{{ PROFILE_C_BACKGROUND_NAME }}</h3>
 
-			{% set background_fields = {
-				(PROFILE_C_BIRTHDAY_NAME)    : PROFILE_C_BIRTHDAY_VALUE,
-				(PROFILE_C_AGE_NAME)         : PROFILE_C_AGE_VALUE,
-				(PROFILE_C_ORIGIN_NAME)      : PROFILE_C_ORIGIN_VALUE,
-				(PROFILE_C_RESIDENCE_NAME)   : PROFILE_C_RESIDENCE_VALUE
-			} %}
-
-			{% if background_fields && background_fields > 0 %}
+			{% if background_fields > 0 %}
 				{{ function.create_details(background_fields) }}
 			{% endif %}
 
@@ -117,7 +117,7 @@
 		</section>
 	{% endif %}
 
-	{% if !feature_total_count && !social_total_count && !religion_total_count && !PROFILE_C_BACKGROUND_VALUE %}
+	{% if feature_total_count == 1 && social_total_count == 1 && religion_total_count == 1 && background_total_count == 1 %}
 		<section class="page-content-section">
 			<h3>Nothing Here Yet</h3>
 			<p>This character is still filling out their profile. Check back later!</p>
