--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_profile.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_profile.scss
@@ -36,7 +36,7 @@
 	}
 }
 
-/* Level - Includes Header Welcome
+/* Level
 ============================================== */
 
 .level {
@@ -61,10 +61,6 @@
 			font-size: rem(40px);
 		}
 	}
-}
-
-#page-welcome .user-profile .level {
-	font-size: rem(16px);
 }
 
 /* HP / MP Stat Bars
