--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_responsive.scss
@@ -1898,9 +1898,11 @@
 			margin-bottom: $ffs;
 		}
 	}
-	#viewprofile .profile-panel .flex-row .details .group-options select {
-		width: 100%;
-		& + .button2 {
+	#viewprofile .profile-panel .flex-row .details .group-options {
+		padding-right: 10px;
+		.button2 {
+			position: static;
+			width: 100%;
 			margin-top: $ffs;
 		}
 	}
