--- a/khyeras/styles/khyeras_v1/template/partials/profile_fields.html
+++ b/khyeras/styles/khyeras_v1/template/partials/profile_fields.html
@@ -1,27 +1,34 @@
-{% macro field_groups(fields, check) %}
+{% macro field_groups(fields, check, race, class) %}
+	{% import 'utilities/macros.html' as function %}
+
 	{% for pf in fields %}
 		{% if (check == 'character' && 'pf_c_' in pf.FIELD_ID) || (check == 'misc' && 'pf_c_' not in pf.FIELD_ID) %}
-			<dl>
-				<dt>
-					<label{% if pf.FIELD_ID %} for="{{ pf.FIELD_ID }}"{% endif %}>
-						{{ pf.LANG_NAME }}{{ lang('COLON') }}{% if pf.S_REQUIRED %} *{% endif %}
-					</label>
-					{% if pf.LANG_EXPLAIN %}
-						<br /><span>{{ pf.LANG_EXPLAIN }}</span>
+			{% set spellbook = 'false' %}
+			{% set spellbook = function.set_spellbook(spellbook, class, race) %}
+
+			{% if pf.FIELD_ID != 'pf_c_spellbook' || (pf.FIELD_ID == 'pf_c_spellbook' && spellbook == 'true') %}
+				<dl>
+					<dt>
+						<label{% if pf.FIELD_ID %} for="{{ pf.FIELD_ID }}"{% endif %}>
+							{{ pf.LANG_NAME }}{{ lang('COLON') }}{% if pf.S_REQUIRED %} *{% endif %}
+						</label>
+						{% if pf.LANG_EXPLAIN %}
+							<br /><span>{{ pf.LANG_EXPLAIN }}</span>
+						{% endif %}
+						{% if pf.ERROR %}
+							<br /><span class="error">{{ pf.ERROR }}</span>
+						{% endif %}
+					</dt>
+					<dd>{{ pf.FIELD }}</dd>
+					{% if pf.LANG_NAME == 'Account Type' %}
+						<dd>
+							<p class="error account-type">
+								<i class="icon fa-exclamation fa-fw icon-red" aria-hidden="true"></i><strong>Note{{ lang('COLON') }}</strong> Changing the "Account Type" dropdown during registration will erase information that has been entered into "Character" fields.
+							</p>
+						</dd>
 					{% endif %}
-					{% if pf.ERROR %}
-						<br /><span class="error">{{ pf.ERROR }}</span>
-					{% endif %}
-				</dt>
-				<dd>{{ pf.FIELD }}</dd>
-				{% if pf.LANG_NAME == 'Account Type' %}
-					<dd>
-						<p class="error account-type">
-							<i class="icon fa-exclamation fa-fw icon-red" aria-hidden="true"></i><strong>Note{{ lang('COLON') }}</strong> Changing the "Account Type" dropdown during registration will erase information that has been entered into "Character" fields.
-						</p>
-					</dd>
-				{% endif %}
-			</dl>
+				</dl>
+			{% endif %}
 		{% endif %}
 	{% endfor %}
 {% endmacro %}
@@ -34,11 +41,11 @@
 	<fieldset class="{{ field_class }}misc-fields">
 		<h3>Miscellaneous Fields</h3>
 		<p><strong>{{ lang('ITEMS_REQUIRED') }}</strong></p>
-		{{ _self.field_groups(profile_fields, 'misc') }}
+		{{ _self.field_groups(profile_fields, 'misc', KHY_USER_RACE, KHY_USER_CLASS) }}
 	</fieldset>
 	<fieldset class="{{ field_class }}character-fields">
 		<h3>Character Fields</h3>
 		<p><strong>{{ lang('ITEMS_REQUIRED') }}</strong></p>
-		{{ _self.field_groups(profile_fields, 'character') }}
+		{{ _self.field_groups(profile_fields, 'character', KHY_USER_RACE, KHY_USER_CLASS) }}
 	</fieldset>
 {% endif %}
